[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.29", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
